--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -8,4 +8,20 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 10px 50px;
+}
+
+.search {
+  width: 300px;
+  height: 30px;
+  color: black;
+}
+
+nav {
+  display: flex;
+  column-gap: 30px;
+}
+
+.logo {
+  filter: invert(1);
 }
