--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,9 +1,10 @@
 .hero {
-  height: 20vh;
+  height: 30vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  text-align: center;
 }
 
 .heroTitle {
