--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -8,13 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 50px;
-}
-
-.search {
-  width: 300px;
-  height: 30px;
-  color: black;
+  padding: 0 50px;
+  height: 65px;
 }
 
 nav {
