--- a/src/pages/Countries.module.css
+++ b/src/pages/Countries.module.css
@@ -19,6 +19,11 @@
   height: 22vh;
 }
 
+.countryContainer:hover,
+.countryContainer:active {
+  background-color: #4369b2;
+}
+
 .countryName {
   font-size: 20px;
   text-align: center;
