--- a/src/pages/Countries.module.css
+++ b/src/pages/Countries.module.css
@@ -1,14 +1,15 @@
 .countries {
-  background-color: #5586e2;
+  background-color: #4369b2;
   overflow: hidden;
 }
 
 .countriesGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(10em, 0.6fr));
   grid-template-rows: repeat(4, auto);
   list-style: none;
   width: 99vw;
+  justify-content: center;
 }
 
 .countryContainer {
@@ -21,11 +22,11 @@
 
 .countryContainer:hover,
 .countryContainer:active {
-  background-color: #4369b2;
+  background-color: #5586e2;
 }
 
 .countryName {
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
   margin-top: 10px;
 }
@@ -45,4 +46,19 @@ main {
   align-items: center;
   flex-direction: column;
   flex-grow: 1;
+}
+
+@media only screen and (max-width: 400px) {
+  li img {
+    height: 70px;
+    width: 100px;
+  }
+
+  .countriesGrid {
+    grid-template-columns: repeat(2, auto);
+  }
+
+  .countryName {
+    font-size: 13px;
+  }
 }
