Add list styling and navbar styles

--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -24,3 +24,9 @@ nav {
 .navFlex > p {
   transform: scale(1.5);
 }
+
+@media only screen and (max-width: 400px) {
+  .navFlex > p {
+    transform: scale(1);
+  }
+}
